--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blue-ruby",
+  "name": "canary",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,11 +15,13 @@
     "@emotion/styled": "^11.11.0",
     "clsx": "^2.1.0",
     "firebase": "^10.7.2",
-    "framer-motion": "^10.18.0",
+    "framer-motion": "^11.0.3",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.0"
+    "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
